--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,8 @@ jobs:
           username: ubuntu
           key: ${{ secrets.TEST_2_EC2_KEY }}
           script: |
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
             cd /home/ubuntu/temp-server
             git fetch --all
             git reset --hard origin/main
